--- a/src/example.ipynb
+++ b/src/example.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -75,37 +75,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "CACHE_DIR = '../workdir/cache'\n",
-    "#BATCH_SIZE = 16\n",
-    "BATCH_SIZE = 8\n",
+    "BATCH_SIZE = 16\n",
+    "#BATCH_SIZE = 8\n",
     "PRED_BATCH_SIZE = 1000\n",
     "MAX_LEN = 128\n",
-    "#MAX_N_EPOCHS = 4\n",
-    "MAX_N_EPOCHS = 100\n",
+    "MAX_N_EPOCHS = 4\n",
+    "#MAX_N_EPOCHS = 100\n",
+    "#MAX_N_EPOCHS = 50\n",
     "#MAX_N_EPOCHS = 10\n",
     "REDUCE_ON_PLATEAU = False\n",
     "WEIGHT_DECAY = 0.01\n",
-    "#LEARNING_RATE = 3e-5\n",
-    "LEARNING_RATE = 1e-5"
+    "LEARNING_RATE = 3e-5\n",
+    "#LEARNING_RATE = 1e-5\n",
+    "#LEARNING_RATE = 2e-5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-09-28 15:35:02,105 Reading data from ../workdir/conll2003/eng\n",
-      "2019-09-28 15:35:02,106 Train: ../workdir/conll2003/eng/train.txt\n",
-      "2019-09-28 15:35:02,106 Dev: ../workdir/conll2003/eng/dev.txt\n",
-      "2019-09-28 15:35:02,107 Test: ../workdir/conll2003/eng/test.txt\n",
+      "2019-09-29 12:50:37,654 Reading data from ../workdir/conll2003/eng\n",
+      "2019-09-29 12:50:37,655 Train: ../workdir/conll2003/eng/train.txt\n",
+      "2019-09-29 12:50:37,655 Dev: ../workdir/conll2003/eng/dev.txt\n",
+      "2019-09-29 12:50:37,656 Test: ../workdir/conll2003/eng/test.txt\n",
       "{\n",
       "    \"TRAIN\": {\n",
       "        \"dataset\": \"TRAIN\",\n",
@@ -194,7 +196,49 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:   0%|          | 0/100 [00:00<?, ?it/s]"
+      "Epoch:   0%|          | 0/4 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-09-29 12:53:12,185 - sequence_tagger_bert - INFO - Train loss: 0.09169178854903219\n",
+      "2019-09-29 12:53:12,185 Train loss: 0.09169178854903219\n",
+      "2019-09-29 12:53:23,914 - sequence_tagger_bert - INFO - Validation loss: 0.03585123224183917\n",
+      "2019-09-29 12:53:23,914 Validation loss: 0.03585123224183917\n",
+      "2019-09-29 12:53:23,916 - sequence_tagger_bert - INFO - Validation metrics: (0.9343810081083341,)\n",
+      "2019-09-29 12:53:23,916 Validation metrics: (0.9343810081083341,)\n",
+      "2019-09-29 12:53:23,932 - sequence_tagger_bert - INFO - Current learning rate: 0.0\n",
+      "2019-09-29 12:53:23,932 Current learning rate: 0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  25%|██▌       | 1/4 [02:28<07:26, 148.71s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-09-29 12:55:09,521 - sequence_tagger_bert - INFO - Train loss: 0.02230669216118018\n",
+      "2019-09-29 12:55:09,521 Train loss: 0.02230669216118018\n",
+      "2019-09-29 12:55:20,985 - sequence_tagger_bert - INFO - Validation loss: 0.03306626668199897\n",
+      "2019-09-29 12:55:20,985 Validation loss: 0.03306626668199897\n",
+      "2019-09-29 12:55:20,987 - sequence_tagger_bert - INFO - Validation metrics: (0.9482889094425292,)\n",
+      "2019-09-29 12:55:20,987 Validation metrics: (0.9482889094425292,)\n",
+      "2019-09-29 12:55:21,003 - sequence_tagger_bert - INFO - Current learning rate: 0.0\n",
+      "2019-09-29 12:55:21,003 Current learning rate: 0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  50%|█████     | 2/4 [04:25<04:38, 139.22s/it]"
      ]
     }
    ],
@@ -230,7 +274,7 @@
     "                           restore_bm_on_lr_change=False,\n",
     "                           max_grad_norm=1.,\n",
     "                           validation_metrics=[f1_entity_level],\n",
-    "                           decision_metric=lambda metrics: -metrics[-1])\n",
+    "                           decision_metric=lambda metrics: -metrics[1])\n",
     "\n",
     "trainer.train(epochs=MAX_N_EPOCHS)"
    ]
@@ -247,7 +291,8 @@
     "\n",
     "_, __, test_metrics = seq_tagger.predict(test_dataloader, evaluate=True, \n",
     "                                         metrics=[f1_entity_level, f1_token_level])\n",
-    "test_metrics"
+    "logger.info(f'Entity-level f1: {test_metrics[1]}')\n",
+    "logger.info(f'Token-level f1: {test_metrics[2]}')"
    ]
   },
   {
