--- a/src/example.ipynb
+++ b/src/example.ipynb
@@ -1,12 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Install dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "!pip install pytorch_transformers flair seqeval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initialization"
    ]
   },
   {
@@ -26,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "CACHE_DIR = '../workdir/cache'\n",
     "BATCH_SIZE = 16\n",
     "#BATCH_SIZE = 8\n",
-    "PRED_BATCH_SIZE = 1000\n",
+    "PRED_BATCH_SIZE = 100\n",
     "MAX_LEN = 128\n",
     "MAX_N_EPOCHS = 4\n",
     "#MAX_N_EPOCHS = 100\n",
@@ -96,18 +110,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load corpus"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-09-29 12:50:37,654 Reading data from ../workdir/conll2003/eng\n",
-      "2019-09-29 12:50:37,655 Train: ../workdir/conll2003/eng/train.txt\n",
-      "2019-09-29 12:50:37,655 Dev: ../workdir/conll2003/eng/dev.txt\n",
-      "2019-09-29 12:50:37,656 Test: ../workdir/conll2003/eng/test.txt\n",
+      "2019-11-23 13:39:40,241 Reading data from ../workdir/conll2003/eng\n",
+      "2019-11-23 13:39:40,242 Train: ../workdir/conll2003/eng/train.txt\n",
+      "2019-11-23 13:39:40,243 Dev: ../workdir/conll2003/eng/dev.txt\n",
+      "2019-11-23 13:39:40,244 Test: ../workdir/conll2003/eng/test.txt\n",
       "{\n",
       "    \"TRAIN\": {\n",
       "        \"dataset\": \"TRAIN\",\n",
@@ -164,8 +185,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,15 +204,25 @@
     "from bert_sequence_tagger.bert_utils import make_bert_tag_dict_from_flair_corpus\n",
     "\n",
     "\n",
-    "bpe_tokenizer = BertTokenizer.from_pretrained('bert-base-cased', cache_dir=CACHE_DIR, do_lower_case=False)\n",
+    "bpe_tokenizer = BertTokenizer.from_pretrained('bert-base-cased', \n",
+    "                                              cache_dir=CACHE_DIR, \n",
+    "                                              do_lower_case=False)\n",
     "\n",
     "idx2tag, tag2idx = make_bert_tag_dict_from_flair_corpus(corpus)\n",
     "\n",
-    "model = nn.DataParallel(BertForTokenClassificationCustom.from_pretrained('bert-base-cased', cache_dir=CACHE_DIR, num_labels=len(tag2idx))).cuda()\n",
-    "#model = BertForTokenClassification.from_pretrained('bert-base-cased', cache_dir=CACHE_DIR, num_labels=len(tag2idx)).cuda()\n",
+    "model = BertForTokenClassificationCustom.from_pretrained('bert-base-cased', \n",
+    "                                                         cache_dir=CACHE_DIR, \n",
+    "                                                         num_labels=len(tag2idx)).cuda()\n",
     "\n",
     "seq_tagger = SequenceTaggerBert(bert_model=model, bpe_tokenizer=bpe_tokenizer, \n",
     "                                idx2tag=idx2tag, tag2idx=tag2idx, max_len=MAX_LEN)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train model"
    ]
   },
   {
@@ -203,52 +241,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-09-29 12:53:12,185 - sequence_tagger_bert - INFO - Train loss: 0.09169178854903219\n",
-      "2019-09-29 12:53:12,185 Train loss: 0.09169178854903219\n",
-      "2019-09-29 12:53:23,914 - sequence_tagger_bert - INFO - Validation loss: 0.03585123224183917\n",
-      "2019-09-29 12:53:23,914 Validation loss: 0.03585123224183917\n",
-      "2019-09-29 12:53:23,916 - sequence_tagger_bert - INFO - Validation metrics: (0.9343810081083341,)\n",
-      "2019-09-29 12:53:23,916 Validation metrics: (0.9343810081083341,)\n",
-      "2019-09-29 12:53:23,932 - sequence_tagger_bert - INFO - Current learning rate: 0.0\n",
-      "2019-09-29 12:53:23,932 Current learning rate: 0.0\n"
+      "2019-11-23 13:42:40,110 - sequence_tagger_bert - INFO - Current learning rate: 2.2970520331496137e-05\n",
+      "2019-11-23 13:42:40,112 - sequence_tagger_bert - INFO - Train loss: 0.09419015559311086\n",
+      "2019-11-23 13:42:49,310 - sequence_tagger_bert - INFO - Validation loss: 0.03420208178100769\n",
+      "2019-11-23 13:42:49,312 - sequence_tagger_bert - INFO - Validation metrics: (0.94098829867834,)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  25%|██▌       | 1/4 [02:28<07:26, 148.71s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2019-09-29 12:55:09,521 - sequence_tagger_bert - INFO - Train loss: 0.02230669216118018\n",
-      "2019-09-29 12:55:09,521 Train loss: 0.02230669216118018\n",
-      "2019-09-29 12:55:20,985 - sequence_tagger_bert - INFO - Validation loss: 0.03306626668199897\n",
-      "2019-09-29 12:55:20,985 Validation loss: 0.03306626668199897\n",
-      "2019-09-29 12:55:20,987 - sequence_tagger_bert - INFO - Validation metrics: (0.9482889094425292,)\n",
-      "2019-09-29 12:55:20,987 Validation metrics: (0.9482889094425292,)\n",
-      "2019-09-29 12:55:21,003 - sequence_tagger_bert - INFO - Current learning rate: 0.0\n",
-      "2019-09-29 12:55:21,003 Current learning rate: 0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch:  50%|█████     | 2/4 [04:25<04:38, 139.22s/it]"
+      "Epoch:  25%|██▌       | 1/4 [02:38<07:54, 158.04s/it]"
      ]
     }
    ],
    "source": [
     "from torch.utils.data import RandomSampler, SequentialSampler\n",
     "\n",
-    "from bert_sequence_tagger.bert_utils import create_loader_from_flair_corpus, get_parameters_without_decay\n",
+    "from bert_sequence_tagger.bert_utils import create_loader_from_flair_corpus, get_model_parameters, get_parameters_without_decay\n",
     "from bert_sequence_tagger.model_trainer_bert import ModelTrainerBert\n",
     "\n",
     "from pytorch_transformers import AdamW, WarmupLinearSchedule\n",
+    "#from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
     "\n",
     "from bert_sequence_tagger.metrics import f1_entity_level, f1_token_level\n",
     "\n",
@@ -260,17 +274,20 @@
     "                                                 SequentialSampler,\n",
     "                                                 batch_size=PRED_BATCH_SIZE)\n",
     "\n",
-    "optimizer = AdamW(get_parameters_without_decay(model), lr=LEARNING_RATE, betas=(0.9, 0.999), \n",
+    "optimizer = AdamW(get_model_parameters(model), \n",
+    "                  lr=LEARNING_RATE, betas=(0.9, 0.999), \n",
     "                  eps =1e-6, weight_decay=0.01, correct_bias=True)\n",
     "lr_scheduler = WarmupLinearSchedule(optimizer, warmup_steps=0.1, \n",
     "                                    t_total=(len(corpus.train) / BATCH_SIZE)*MAX_N_EPOCHS)\n",
+    "#lr_scheduler = ReduceLROnPlateau(optimizer)\n",
+    "\n",
     "trainer = ModelTrainerBert(model=seq_tagger, \n",
     "                           optimizer=optimizer, \n",
     "                           lr_scheduler=lr_scheduler,\n",
     "                           train_dataloader=train_dataloader, \n",
     "                           val_dataloader=val_dataloader,\n",
     "                           update_scheduler='es',\n",
-    "                           keep_best_model=True,\n",
+    "                           keep_best_model=False,\n",
     "                           restore_bm_on_lr_change=False,\n",
     "                           max_grad_norm=1.,\n",
     "                           validation_metrics=[f1_entity_level],\n",
@@ -281,9 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-11-23 13:20:09,423 - sequence_tagger_bert - INFO - Entity-level f1: 0.911490409994721\n",
+      "2019-11-23 13:20:09,424 - sequence_tagger_bert - INFO - Token-level f1: 0.9273060476481368\n"
+     ]
+    }
+   ],
    "source": [
     "test_dataloader = create_loader_from_flair_corpus(corpus.test,\n",
     "                                                  SequentialSampler,\n",
@@ -321,9 +347,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
