--- a/src/example.ipynb
+++ b/src/example.ipynb
@@ -4,6 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Readme"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- This example illustrates processing CoNLL-2003 corpus with BERT for sequence tagging from https://github.com/huggingface/transformers\n",
+    "- Using this script it is possible to achieve 91.4 F1 entity-level score and 92.8 F1 token-level score with bert-base\n",
+    "- With 100 epochs and lr=1e-5, batch_size=8 it is possible to achieve the same score as in https://gluon-nlp.mxnet.io/model_zoo/bert/index.html "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Install dependencies"
    ]
   },
@@ -20,12 +36,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Download CoNLL-2003"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2019-11-23 15:05:42--  https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.testa\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 827012 (808K) [text/plain]\n",
+      "Saving to: ‘eng.testa’\n",
+      "\n",
+      "eng.testa           100%[===================>] 807.63K  2.64MB/s    in 0.3s    \n",
+      "\n",
+      "2019-11-23 15:05:43 (2.64 MB/s) - ‘eng.testa’ saved [827012/827012]\n",
+      "\n",
+      "--2019-11-23 15:05:43--  https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.testb\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 748096 (731K) [text/plain]\n",
+      "Saving to: ‘eng.testb’\n",
+      "\n",
+      "eng.testb           100%[===================>] 730.56K  2.91MB/s    in 0.2s    \n",
+      "\n",
+      "2019-11-23 15:05:44 (2.91 MB/s) - ‘eng.testb’ saved [748096/748096]\n",
+      "\n",
+      "--2019-11-23 15:05:45--  https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.train\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 3281528 (3.1M) [text/plain]\n",
+      "Saving to: ‘eng.train’\n",
+      "\n",
+      "eng.train           100%[===================>]   3.13M   659KB/s    in 4.9s    \n",
+      "\n",
+      "2019-11-23 15:05:50 (659 KB/s) - ‘eng.train’ saved [3281528/3281528]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mkdir -p data\n",
+    "!wget https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.testa && mv eng.testa ./data/dev.txt\n",
+    "!wget https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.testb && mv eng.testb ./data/test.txt\n",
+    "!wget https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.train && mv eng.train ./data/train.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Initialization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,40 +108,25 @@
     "%autoreload 2\n",
     "\n",
     "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '3'\n",
-    "\n",
-    "import sys"
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '3'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import logging\n",
+    "import sys\n",
     "\n",
-    "\n",
-    "logger = logging.getLogger('sequence_tagger_bert')\n",
-    "\n",
-    "formatter = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
-    "\n",
-    "logger.handlers = []\n",
-    "\n",
-    "fhandler = logging.handlers.TimedRotatingFileHandler(filename='logs.txt', when='midnight')\n",
-    "fhandler.setFormatter(formatter)\n",
-    "logger.addHandler(fhandler)\n",
-    "\n",
-    "handler = logging.StreamHandler(sys.stdout)\n",
-    "handler.setFormatter(formatter)\n",
-    "logger.addHandler(handler)\n",
-    "\n",
-    "logger.setLevel(logging.DEBUG)"
+    "logging.basicConfig(stream=sys.stdout, level=logging.DEBUG)\n",
+    "logger = logging.getLogger('sequence_tagger_bert')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -89,24 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CACHE_DIR = '../workdir/cache'\n",
+    "CACHE_DIR = 'cache'\n",
     "BATCH_SIZE = 16\n",
-    "#BATCH_SIZE = 8\n",
     "PRED_BATCH_SIZE = 100\n",
     "MAX_LEN = 128\n",
     "MAX_N_EPOCHS = 4\n",
-    "#MAX_N_EPOCHS = 100\n",
-    "#MAX_N_EPOCHS = 50\n",
-    "#MAX_N_EPOCHS = 10\n",
-    "REDUCE_ON_PLATEAU = False\n",
     "WEIGHT_DECAY = 0.01\n",
-    "LEARNING_RATE = 3e-5\n",
-    "#LEARNING_RATE = 1e-5\n",
-    "#LEARNING_RATE = 2e-5"
+    "LEARNING_RATE = 5e-5"
    ]
   },
   {
@@ -125,10 +178,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-11-23 13:39:40,241 Reading data from ../workdir/conll2003/eng\n",
-      "2019-11-23 13:39:40,242 Train: ../workdir/conll2003/eng/train.txt\n",
-      "2019-11-23 13:39:40,243 Dev: ../workdir/conll2003/eng/dev.txt\n",
-      "2019-11-23 13:39:40,244 Test: ../workdir/conll2003/eng/test.txt\n",
+      "2019-11-23 15:14:09,439 Reading data from data\n",
+      "2019-11-23 15:14:09,440 Train: data/train.txt\n",
+      "2019-11-23 15:14:09,440 Dev: data/dev.txt\n",
+      "2019-11-23 15:14:09,441 Test: data/test.txt\n",
       "{\n",
       "    \"TRAIN\": {\n",
       "        \"dataset\": \"TRAIN\",\n",
@@ -174,7 +227,7 @@
     "from flair.datasets import ColumnCorpus\n",
     "\n",
     "\n",
-    "data_folder = '../workdir/conll2003/eng'\n",
+    "data_folder = 'data'\n",
     "corpus = ColumnCorpus(data_folder, \n",
     "                      {0 : 'text', 3 : 'ner'},\n",
     "                      train_file='train.txt',\n",
@@ -195,7 +248,15 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 435779157/435779157 [01:14<00:00, 5816928.08B/s] \n"
+     ]
+    }
+   ],
    "source": [
     "from bert_sequence_tagger import SequenceTaggerBert, BertForTokenClassificationCustom\n",
     "from pytorch_transformers import BertTokenizer, BertForTokenClassification\n",
@@ -227,31 +288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:   0%|          | 0/4 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2019-11-23 13:42:40,110 - sequence_tagger_bert - INFO - Current learning rate: 2.2970520331496137e-05\n",
-      "2019-11-23 13:42:40,112 - sequence_tagger_bert - INFO - Train loss: 0.09419015559311086\n",
-      "2019-11-23 13:42:49,310 - sequence_tagger_bert - INFO - Validation loss: 0.03420208178100769\n",
-      "2019-11-23 13:42:49,312 - sequence_tagger_bert - INFO - Validation metrics: (0.94098829867834,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch:  25%|██▌       | 1/4 [02:38<07:54, 158.04s/it]"
+      "Epoch: 100%|██████████| 4/4 [10:21<00:00, 155.32s/it]\n"
      ]
     }
    ],
@@ -262,7 +306,6 @@
     "from bert_sequence_tagger.model_trainer_bert import ModelTrainerBert\n",
     "\n",
     "from pytorch_transformers import AdamW, WarmupLinearSchedule\n",
-    "#from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
     "\n",
     "from bert_sequence_tagger.metrics import f1_entity_level, f1_token_level\n",
     "\n",
@@ -279,7 +322,6 @@
     "                  eps =1e-6, weight_decay=0.01, correct_bias=True)\n",
     "lr_scheduler = WarmupLinearSchedule(optimizer, warmup_steps=0.1, \n",
     "                                    t_total=(len(corpus.train) / BATCH_SIZE)*MAX_N_EPOCHS)\n",
-    "#lr_scheduler = ReduceLROnPlateau(optimizer)\n",
     "\n",
     "trainer = ModelTrainerBert(model=seq_tagger, \n",
     "                           optimizer=optimizer, \n",
@@ -298,15 +340,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-11-23 13:20:09,423 - sequence_tagger_bert - INFO - Entity-level f1: 0.911490409994721\n",
-      "2019-11-23 13:20:09,424 - sequence_tagger_bert - INFO - Token-level f1: 0.9273060476481368\n"
+      "INFO:sequence_tagger_bert:Entity-level f1: 0.9160722148833114\n",
+      "INFO:sequence_tagger_bert:Token-level f1: 0.930110159118727\n"
      ]
     }
    ],
@@ -319,15 +361,6 @@
     "                                         metrics=[f1_entity_level, f1_token_level])\n",
     "logger.info(f'Entity-level f1: {test_metrics[1]}')\n",
     "logger.info(f'Token-level f1: {test_metrics[2]}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(0.9143007822800387, 0.9306361914074436)"
    ]
   }
  ],
