--- a/src/example.ipynb
+++ b/src/example.ipynb
@@ -41,54 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2019-11-23 15:05:42--  https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.testa\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 827012 (808K) [text/plain]\n",
-      "Saving to: ‘eng.testa’\n",
-      "\n",
-      "eng.testa           100%[===================>] 807.63K  2.64MB/s    in 0.3s    \n",
-      "\n",
-      "2019-11-23 15:05:43 (2.64 MB/s) - ‘eng.testa’ saved [827012/827012]\n",
-      "\n",
-      "--2019-11-23 15:05:43--  https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.testb\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 748096 (731K) [text/plain]\n",
-      "Saving to: ‘eng.testb’\n",
-      "\n",
-      "eng.testb           100%[===================>] 730.56K  2.91MB/s    in 0.2s    \n",
-      "\n",
-      "2019-11-23 15:05:44 (2.91 MB/s) - ‘eng.testb’ saved [748096/748096]\n",
-      "\n",
-      "--2019-11-23 15:05:45--  https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.train\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 3281528 (3.1M) [text/plain]\n",
-      "Saving to: ‘eng.train’\n",
-      "\n",
-      "eng.train           100%[===================>]   3.13M   659KB/s    in 4.9s    \n",
-      "\n",
-      "2019-11-23 15:05:50 (659 KB/s) - ‘eng.train’ saved [3281528/3281528]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!mkdir -p data\n",
-    "!wget https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.testa && mv eng.testa ./data/dev.txt\n",
-    "!wget https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.testb && mv eng.testb ./data/test.txt\n",
-    "!wget https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.train && mv eng.train ./data/train.txt"
+    "!wget https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.testa -O ./data/eng.testa\n",
+    "!wget https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.testb -O ./data/eng.testb\n",
+    "!wget https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.train -O ./data/eng.train"
    ]
   },
   {
@@ -104,16 +64,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "# Choosing cuda devices if there are multiple\n",
     "\n",
     "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '3'"
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '0'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,58 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2019-11-23 15:14:09,439 Reading data from data\n",
-      "2019-11-23 15:14:09,440 Train: data/train.txt\n",
-      "2019-11-23 15:14:09,440 Dev: data/dev.txt\n",
-      "2019-11-23 15:14:09,441 Test: data/test.txt\n",
-      "{\n",
-      "    \"TRAIN\": {\n",
-      "        \"dataset\": \"TRAIN\",\n",
-      "        \"total_number_of_documents\": 14987,\n",
-      "        \"number_of_documents_per_class\": {},\n",
-      "        \"number_of_tokens_per_tag\": {},\n",
-      "        \"number_of_tokens\": {\n",
-      "            \"total\": 204567,\n",
-      "            \"min\": 1,\n",
-      "            \"max\": 113,\n",
-      "            \"avg\": 13.649629679055181\n",
-      "        }\n",
-      "    },\n",
-      "    \"TEST\": {\n",
-      "        \"dataset\": \"TEST\",\n",
-      "        \"total_number_of_documents\": 3684,\n",
-      "        \"number_of_documents_per_class\": {},\n",
-      "        \"number_of_tokens_per_tag\": {},\n",
-      "        \"number_of_tokens\": {\n",
-      "            \"total\": 46666,\n",
-      "            \"min\": 1,\n",
-      "            \"max\": 124,\n",
-      "            \"avg\": 12.667209554831704\n",
-      "        }\n",
-      "    },\n",
-      "    \"DEV\": {\n",
-      "        \"dataset\": \"DEV\",\n",
-      "        \"total_number_of_documents\": 3466,\n",
-      "        \"number_of_documents_per_class\": {},\n",
-      "        \"number_of_tokens_per_tag\": {},\n",
-      "        \"number_of_tokens\": {\n",
-      "            \"total\": 51578,\n",
-      "            \"min\": 1,\n",
-      "            \"max\": 109,\n",
-      "            \"avg\": 14.881130986728216\n",
-      "        }\n",
-      "    }\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from flair.datasets import ColumnCorpus\n",
     "\n",
@@ -230,9 +140,9 @@
     "data_folder = 'data'\n",
     "corpus = ColumnCorpus(data_folder, \n",
     "                      {0 : 'text', 3 : 'ner'},\n",
-    "                      train_file='train.txt',\n",
-    "                      test_file='test.txt',\n",
-    "                      dev_file='dev.txt')\n",
+    "                      train_file='eng.train',\n",
+    "                      test_file='eng.testb',\n",
+    "                      dev_file='eng.testa')\n",
     "\n",
     "print(corpus.obtain_statistics())"
    ]
