Fix readme and example

--- a/src/example.ipynb
+++ b/src/example.ipynb
@@ -45,10 +45,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir -p data\n",
-    "!wget https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.testa -O ./data/eng.testa\n",
-    "!wget https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.testb -O ./data/eng.testb\n",
-    "!wget https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.train -O ./data/eng.train"
+    "!mkdir -p conll2003\n",
+    "!wget https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.testa -O ./conll2003/eng.testa\n",
+    "!wget https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.testb -O ./conll2003/eng.testb\n",
+    "!wget https://raw.githubusercontent.com/synalp/NER/master/corpus/CoNLL-2003/eng.train -O ./conll2003/eng.train"
    ]
   },
   {
@@ -137,7 +137,7 @@
     "from flair.datasets import ColumnCorpus\n",
     "\n",
     "\n",
-    "data_folder = 'data'\n",
+    "data_folder = 'conll2003'\n",
     "corpus = ColumnCorpus(data_folder, \n",
     "                      {0 : 'text', 3 : 'ner'},\n",
     "                      train_file='eng.train',\n",
