--- a/src/example.ipynb
+++ b/src/example.ipynb
@@ -60,32 +60,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Choosing cuda devices if there are multiple\n",
     "\n",
     "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '0'"
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '1'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import logging\n",
     "import sys\n",
     "\n",
-    "logging.basicConfig(stream=sys.stdout, level=logging.DEBUG)\n",
+    "logging.basicConfig(stream=sys.stdout, level=logging.INFO)\n",
     "logger = logging.getLogger('sequence_tagger_bert')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,6 +122,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x7ffaf118e530>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "torch.manual_seed(117)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -130,9 +151,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:transformers.file_utils:TensorFlow version 2.0.0 available.\n",
+      "INFO:transformers.file_utils:PyTorch version 1.3.1 available.\n",
+      "INFO:transformers.modeling_xlnet:Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex .\n",
+      "2019-11-24 11:50:08,055 Reading data from conll2003\n",
+      "2019-11-24 11:50:08,056 Train: conll2003/eng.train\n",
+      "2019-11-24 11:50:08,056 Dev: conll2003/eng.testa\n",
+      "2019-11-24 11:50:08,057 Test: conll2003/eng.testb\n",
+      "{\n",
+      "    \"TRAIN\": {\n",
+      "        \"dataset\": \"TRAIN\",\n",
+      "        \"total_number_of_documents\": 14987,\n",
+      "        \"number_of_documents_per_class\": {},\n",
+      "        \"number_of_tokens_per_tag\": {},\n",
+      "        \"number_of_tokens\": {\n",
+      "            \"total\": 204567,\n",
+      "            \"min\": 1,\n",
+      "            \"max\": 113,\n",
+      "            \"avg\": 13.649629679055181\n",
+      "        }\n",
+      "    },\n",
+      "    \"TEST\": {\n",
+      "        \"dataset\": \"TEST\",\n",
+      "        \"total_number_of_documents\": 3684,\n",
+      "        \"number_of_documents_per_class\": {},\n",
+      "        \"number_of_tokens_per_tag\": {},\n",
+      "        \"number_of_tokens\": {\n",
+      "            \"total\": 46666,\n",
+      "            \"min\": 1,\n",
+      "            \"max\": 124,\n",
+      "            \"avg\": 12.667209554831704\n",
+      "        }\n",
+      "    },\n",
+      "    \"DEV\": {\n",
+      "        \"dataset\": \"DEV\",\n",
+      "        \"total_number_of_documents\": 3466,\n",
+      "        \"number_of_documents_per_class\": {},\n",
+      "        \"number_of_tokens_per_tag\": {},\n",
+      "        \"number_of_tokens\": {\n",
+      "            \"total\": 51578,\n",
+      "            \"min\": 1,\n",
+      "            \"max\": 109,\n",
+      "            \"avg\": 14.881130986728216\n",
+      "        }\n",
+      "    }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "from flair.datasets import ColumnCorpus\n",
     "\n",
@@ -156,23 +229,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 435779157/435779157 [01:14<00:00, 5816928.08B/s] \n"
+      "INFO:pytorch_transformers.modeling_bert:Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex .\n",
+      "INFO:pytorch_transformers.modeling_xlnet:Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex .\n",
+      "INFO:pytorch_transformers.tokenization_utils:loading file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-cased-vocab.txt from cache at cache/5e8a2b4893d13790ed4150ca1906be5f7a03d6c4ddf62296c383f6db42814db2.e13dbb970cb325137104fb2e5f36fe865f27746c6b526f6352861b1980eb80b1\n",
+      "INFO:pytorch_transformers.modeling_utils:loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-cased-config.json from cache at cache/b945b69218e98b3e2c95acf911789741307dec43c698d35fad11c1ae28bda352.d7a3af18ce3a2ab7c0f48f04dc8daff45ed9a3ed333b9e9a79d012a0dedf87a6\n",
+      "INFO:pytorch_transformers.modeling_utils:Model config {\n",
+      "  \"attention_probs_dropout_prob\": 0.1,\n",
+      "  \"finetuning_task\": null,\n",
+      "  \"hidden_act\": \"gelu\",\n",
+      "  \"hidden_dropout_prob\": 0.1,\n",
+      "  \"hidden_size\": 768,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 3072,\n",
+      "  \"layer_norm_eps\": 1e-12,\n",
+      "  \"max_position_embeddings\": 512,\n",
+      "  \"num_attention_heads\": 12,\n",
+      "  \"num_hidden_layers\": 12,\n",
+      "  \"num_labels\": 9,\n",
+      "  \"output_attentions\": false,\n",
+      "  \"output_hidden_states\": false,\n",
+      "  \"pruned_heads\": {},\n",
+      "  \"torchscript\": false,\n",
+      "  \"type_vocab_size\": 2,\n",
+      "  \"vocab_size\": 28996\n",
+      "}\n",
+      "\n",
+      "INFO:pytorch_transformers.modeling_utils:loading weights file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-cased-pytorch_model.bin from cache at cache/35d8b9d36faaf46728a0192d82bf7d00137490cd6074e8500778afed552a67e5.3fadbea36527ae472139fe84cddaa65454d7429f12d543d80bfc3ad70de55ac2\n",
+      "INFO:pytorch_transformers.modeling_utils:Weights of BertForTokenClassificationCustom not initialized from pretrained model: ['classifier.weight', 'classifier.bias']\n",
+      "INFO:pytorch_transformers.modeling_utils:Weights from pretrained model not used in BertForTokenClassificationCustom: ['cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias']\n"
      ]
     }
    ],
    "source": [
     "from bert_sequence_tagger import SequenceTaggerBert, BertForTokenClassificationCustom\n",
-    "from pytorch_transformers import BertTokenizer, BertForTokenClassification\n",
-    "import torch.nn as nn\n",
-    "\n",
     "from bert_sequence_tagger.bert_utils import make_bert_tag_dict_from_flair_corpus\n",
+    "\n",
+    "from pytorch_transformers import BertTokenizer, BertForTokenClassification\n",
     "\n",
     "\n",
     "bpe_tokenizer = BertTokenizer.from_pretrained('bert-base-cased', \n",
@@ -186,7 +285,8 @@
     "                                                         num_labels=len(tag2idx)).cuda()\n",
     "\n",
     "seq_tagger = SequenceTaggerBert(bert_model=model, bpe_tokenizer=bpe_tokenizer, \n",
-    "                                idx2tag=idx2tag, tag2idx=tag2idx, max_len=MAX_LEN)"
+    "                                idx2tag=idx2tag, tag2idx=tag2idx, max_len=MAX_LEN,\n",
+    "                                pred_batch_size=PRED_BATCH_SIZE)"
    ]
   },
   {
@@ -198,34 +298,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch: 100%|██████████| 4/4 [10:21<00:00, 155.32s/it]\n"
+      "Epoch:   0%|          | 0/4 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:sequence_tagger_bert:Current learning rate: 3.828420055249356e-05\n",
+      "INFO:sequence_tagger_bert:Train loss: 0.08635571034180195\n",
+      "INFO:sequence_tagger_bert:Validation loss: 0.03886955951792047\n",
+      "INFO:sequence_tagger_bert:Validation metrics: (0.9362345627152818,)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  25%|██▌       | 1/4 [02:31<07:34, 151.44s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:sequence_tagger_bert:Current learning rate: 2.6567066579477667e-05\n",
+      "INFO:sequence_tagger_bert:Train loss: 0.022030211970791358\n",
+      "INFO:sequence_tagger_bert:Validation loss: 0.032396575959865004\n",
+      "INFO:sequence_tagger_bert:Validation metrics: (0.9428475374012439,)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  50%|█████     | 2/4 [04:52<04:56, 148.39s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:sequence_tagger_bert:Current learning rate: 1.4849932606461773e-05\n",
+      "INFO:sequence_tagger_bert:Train loss: 0.009602448526282073\n",
+      "INFO:sequence_tagger_bert:Validation loss: 0.031968948459534935\n",
+      "INFO:sequence_tagger_bert:Validation metrics: (0.9522608841822156,)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  75%|███████▌  | 3/4 [07:20<02:28, 148.27s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:sequence_tagger_bert:Current learning rate: 3.1327986334458785e-06\n",
+      "INFO:sequence_tagger_bert:Train loss: 0.003817373911283591\n",
+      "INFO:sequence_tagger_bert:Validation loss: 0.03424496421454629\n",
+      "INFO:sequence_tagger_bert:Validation metrics: (0.9553616378587012,)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 100%|██████████| 4/4 [09:48<00:00, 147.14s/it]\n"
      ]
     }
    ],
    "source": [
-    "from torch.utils.data import RandomSampler, SequentialSampler\n",
-    "\n",
-    "from bert_sequence_tagger.bert_utils import create_loader_from_flair_corpus, get_model_parameters, get_parameters_without_decay\n",
+    "from bert_sequence_tagger.bert_utils import get_model_parameters, prepare_flair_corpus\n",
     "from bert_sequence_tagger.model_trainer_bert import ModelTrainerBert\n",
+    "from bert_sequence_tagger.metrics import f1_entity_level, f1_token_level\n",
     "\n",
     "from pytorch_transformers import AdamW, WarmupLinearSchedule\n",
     "\n",
-    "from bert_sequence_tagger.metrics import f1_entity_level, f1_token_level\n",
     "\n",
-    "\n",
-    "train_dataloader = create_loader_from_flair_corpus(corpus.train, \n",
-    "                                                   RandomSampler, \n",
-    "                                                   batch_size=BATCH_SIZE)\n",
-    "val_dataloader = create_loader_from_flair_corpus(corpus.dev,\n",
-    "                                                 SequentialSampler,\n",
-    "                                                 batch_size=PRED_BATCH_SIZE)\n",
+    "train_dataset = prepare_flair_corpus(corpus.train)\n",
+    "val_dataset = prepare_flair_corpus(corpus.dev)\n",
     "\n",
     "optimizer = AdamW(get_model_parameters(model), \n",
     "                  lr=LEARNING_RATE, betas=(0.9, 0.999), \n",
@@ -236,29 +397,29 @@
     "trainer = ModelTrainerBert(model=seq_tagger, \n",
     "                           optimizer=optimizer, \n",
     "                           lr_scheduler=lr_scheduler,\n",
-    "                           train_dataloader=train_dataloader, \n",
-    "                           val_dataloader=val_dataloader,\n",
+    "                           train_dataset=train_dataset, \n",
+    "                           val_dataset=val_dataset,\n",
     "                           update_scheduler='es',\n",
-    "                           keep_best_model=False,\n",
-    "                           restore_bm_on_lr_change=False,\n",
-    "                           max_grad_norm=1.,\n",
     "                           validation_metrics=[f1_entity_level],\n",
-    "                           decision_metric=lambda metrics: -metrics[1])\n",
+    "                           batch_size=BATCH_SIZE)\n",
     "\n",
     "trainer.train(epochs=MAX_N_EPOCHS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:sequence_tagger_bert:Entity-level f1: 0.9160722148833114\n",
-      "INFO:sequence_tagger_bert:Token-level f1: 0.930110159118727\n"
+     "ename": "NameError",
+     "evalue": "name 'create_loader_from_flair_corpus' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-7815e766ea98>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m test_dataloader = create_loader_from_flair_corpus(corpus.test,\n\u001b[0m\u001b[1;32m      2\u001b[0m                                                   \u001b[0mSequentialSampler\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                                   batch_size=PRED_BATCH_SIZE)\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m _, __, test_metrics = seq_tagger.predict(test_dataloader, evaluate=True, \n",
+      "\u001b[0;31mNameError\u001b[0m: name 'create_loader_from_flair_corpus' is not defined"
      ]
     }
    ],
