--- a/src/example.ipynb
+++ b/src/example.ipynb
@@ -408,27 +408,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'create_loader_from_flair_corpus' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-7815e766ea98>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m test_dataloader = create_loader_from_flair_corpus(corpus.test,\n\u001b[0m\u001b[1;32m      2\u001b[0m                                                   \u001b[0mSequentialSampler\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                                   batch_size=PRED_BATCH_SIZE)\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m _, __, test_metrics = seq_tagger.predict(test_dataloader, evaluate=True, \n",
-      "\u001b[0;31mNameError\u001b[0m: name 'create_loader_from_flair_corpus' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:sequence_tagger_bert:Entity-level f1: 0.9146330719760374\n",
+      "INFO:sequence_tagger_bert:Token-level f1: 0.9302211603259204\n"
      ]
     }
    ],
    "source": [
-    "test_dataloader = create_loader_from_flair_corpus(corpus.test,\n",
-    "                                                  SequentialSampler,\n",
-    "                                                  batch_size=PRED_BATCH_SIZE)\n",
+    "test_dataset = prepare_flair_corpus(corpus.test)\n",
     "\n",
-    "_, __, test_metrics = seq_tagger.predict(test_dataloader, evaluate=True, \n",
+    "_, __, test_metrics = seq_tagger.predict(test_dataset, evaluate=True, \n",
     "                                         metrics=[f1_entity_level, f1_token_level])\n",
     "logger.info(f'Entity-level f1: {test_metrics[1]}')\n",
     "logger.info(f'Token-level f1: {test_metrics[2]}')"
