--- a/src/example.ipynb
+++ b/src/example.ipynb
@@ -129,7 +129,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7ffaf118e530>"
+       "<torch._C.Generator at 0x7fcce68de530>"
       ]
      },
      "execution_count": 5,
@@ -161,10 +161,10 @@
       "INFO:transformers.file_utils:TensorFlow version 2.0.0 available.\n",
       "INFO:transformers.file_utils:PyTorch version 1.3.1 available.\n",
       "INFO:transformers.modeling_xlnet:Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex .\n",
-      "2019-11-24 11:50:08,055 Reading data from conll2003\n",
-      "2019-11-24 11:50:08,056 Train: conll2003/eng.train\n",
-      "2019-11-24 11:50:08,056 Dev: conll2003/eng.testa\n",
-      "2019-11-24 11:50:08,057 Test: conll2003/eng.testb\n",
+      "2019-11-24 13:04:36,897 Reading data from conll2003\n",
+      "2019-11-24 13:04:36,897 Train: conll2003/eng.train\n",
+      "2019-11-24 13:04:36,898 Dev: conll2003/eng.testa\n",
+      "2019-11-24 13:04:36,899 Test: conll2003/eng.testb\n",
       "{\n",
       "    \"TRAIN\": {\n",
       "        \"dataset\": \"TRAIN\",\n",
@@ -322,7 +322,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  25%|██▌       | 1/4 [02:31<07:34, 151.44s/it]"
+      "Epoch:  25%|██▌       | 1/4 [02:29<07:28, 149.63s/it]"
      ]
     },
     {
@@ -339,7 +339,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  50%|█████     | 2/4 [04:52<04:56, 148.39s/it]"
+      "Epoch:  50%|█████     | 2/4 [04:52<04:55, 147.64s/it]"
      ]
     },
     {
@@ -356,7 +356,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  75%|███████▌  | 3/4 [07:20<02:28, 148.27s/it]"
+      "Epoch:  75%|███████▌  | 3/4 [07:05<02:23, 143.07s/it]"
      ]
     },
     {
@@ -373,7 +373,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch: 100%|██████████| 4/4 [09:48<00:00, 147.14s/it]\n"
+      "Epoch: 100%|██████████| 4/4 [09:33<00:00, 143.38s/it]\n"
      ]
     }
    ],
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -427,6 +427,33 @@
     "                                         metrics=[f1_entity_level, f1_token_level])\n",
     "logger.info(f'Entity-level f1: {test_metrics[1]}')\n",
     "logger.info(f'Token-level f1: {test_metrics[2]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Predicting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([['O', 'O', 'O', 'O', 'I-LOC', 'I-LOC', 'O', 'O']], [10.285023])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seq_tagger.predict([['We', 'are', 'living', 'in', 'New', 'York', 'city', '.']])"
    ]
   }
  ],
