--- a/src/example.ipynb
+++ b/src/example.ipynb
@@ -129,7 +129,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fcce68de530>"
+       "<torch._C.Generator at 0x7f9039904530>"
       ]
      },
      "execution_count": 5,
@@ -161,10 +161,10 @@
       "INFO:transformers.file_utils:TensorFlow version 2.0.0 available.\n",
       "INFO:transformers.file_utils:PyTorch version 1.3.1 available.\n",
       "INFO:transformers.modeling_xlnet:Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex .\n",
-      "2019-11-24 13:04:36,897 Reading data from conll2003\n",
-      "2019-11-24 13:04:36,897 Train: conll2003/eng.train\n",
-      "2019-11-24 13:04:36,898 Dev: conll2003/eng.testa\n",
-      "2019-11-24 13:04:36,899 Test: conll2003/eng.testb\n",
+      "2019-11-24 23:14:40,031 Reading data from conll2003\n",
+      "2019-11-24 23:14:40,031 Train: conll2003/eng.train\n",
+      "2019-11-24 23:14:40,032 Dev: conll2003/eng.testa\n",
+      "2019-11-24 23:14:40,033 Test: conll2003/eng.testb\n",
       "{\n",
       "    \"TRAIN\": {\n",
       "        \"dataset\": \"TRAIN\",\n",
@@ -322,7 +322,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  25%|██▌       | 1/4 [02:29<07:28, 149.63s/it]"
+      "Epoch:  25%|██▌       | 1/4 [02:30<07:32, 150.91s/it]"
      ]
     },
     {
@@ -339,7 +339,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  50%|█████     | 2/4 [04:52<04:55, 147.64s/it]"
+      "Epoch:  50%|█████     | 2/4 [04:44<04:51, 145.57s/it]"
      ]
     },
     {
@@ -356,7 +356,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  75%|███████▌  | 3/4 [07:05<02:23, 143.07s/it]"
+      "Epoch:  75%|███████▌  | 3/4 [06:37<02:15, 135.85s/it]"
      ]
     },
     {
@@ -373,7 +373,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch: 100%|██████████| 4/4 [09:33<00:00, 143.38s/it]\n"
+      "Epoch: 100%|██████████| 4/4 [09:08<00:00, 137.00s/it]\n"
      ]
     }
    ],
@@ -444,7 +444,9 @@
     {
      "data": {
       "text/plain": [
-       "([['O', 'O', 'O', 'O', 'I-LOC', 'I-LOC', 'O', 'O']], [10.285023])"
+       "([['O', 'O', 'O', 'O', 'I-LOC', 'I-LOC', 'O', 'O'],\n",
+       "  ['I-PER', 'I-PER', 'I-PER', 'O', 'O', 'O', 'O', 'O', 'O', 'O']],\n",
+       " [10.285023, 10.41528])"
       ]
      },
      "execution_count": 10,
@@ -453,7 +455,8 @@
     }
    ],
    "source": [
-    "seq_tagger.predict([['We', 'are', 'living', 'in', 'New', 'York', 'city', '.']])"
+    "seq_tagger.predict([['We', 'are', 'living', 'in', 'New', 'York', 'city', '.'],\n",
+    "                    ['Satya', 'Narayana', 'Nadella', 'is', 'an', 'engineer', 'and', 'business', 'executive', '.']])"
    ]
   }
  ],
