--- a/src/example.ipynb
+++ b/src/example.ipynb
@@ -60,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Choosing cuda devices if there are multiple\n",
     "\n",
     "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '0'"
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '1'"
    ]
   },
   {
@@ -129,7 +129,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f9039904530>"
+       "<torch._C.Generator at 0x7f897abbc550>"
       ]
      },
      "execution_count": 5,
@@ -161,10 +161,10 @@
       "INFO:transformers.file_utils:TensorFlow version 2.0.0 available.\n",
       "INFO:transformers.file_utils:PyTorch version 1.3.1 available.\n",
       "INFO:transformers.modeling_xlnet:Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex .\n",
-      "2019-11-24 23:14:40,031 Reading data from conll2003\n",
-      "2019-11-24 23:14:40,031 Train: conll2003/eng.train\n",
-      "2019-11-24 23:14:40,032 Dev: conll2003/eng.testa\n",
-      "2019-11-24 23:14:40,033 Test: conll2003/eng.testb\n",
+      "2019-11-25 00:50:26,589 Reading data from conll2003\n",
+      "2019-11-25 00:50:26,590 Train: conll2003/eng.train\n",
+      "2019-11-25 00:50:26,591 Dev: conll2003/eng.testa\n",
+      "2019-11-25 00:50:26,592 Test: conll2003/eng.testb\n",
       "{\n",
       "    \"TRAIN\": {\n",
       "        \"dataset\": \"TRAIN\",\n",
@@ -322,7 +322,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  25%|██▌       | 1/4 [02:30<07:32, 150.91s/it]"
+      "Epoch:  25%|██▌       | 1/4 [02:33<07:41, 153.72s/it]"
      ]
     },
     {
@@ -339,7 +339,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  50%|█████     | 2/4 [04:44<04:51, 145.57s/it]"
+      "Epoch:  50%|█████     | 2/4 [05:02<05:04, 152.37s/it]"
      ]
     },
     {
@@ -356,7 +356,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  75%|███████▌  | 3/4 [06:37<02:15, 135.85s/it]"
+      "Epoch:  75%|███████▌  | 3/4 [07:31<02:31, 151.32s/it]"
      ]
     },
     {
@@ -373,7 +373,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch: 100%|██████████| 4/4 [09:08<00:00, 137.00s/it]\n"
+      "Epoch: 100%|██████████| 4/4 [10:05<00:00, 151.47s/it]\n"
      ]
     }
    ],
