--- a/src/example.ipynb
+++ b/src/example.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f897abbc550>"
+       "<torch._C.Generator at 0x7fd95505e530>"
       ]
      },
      "execution_count": 5,
@@ -161,10 +161,10 @@
       "INFO:transformers.file_utils:TensorFlow version 2.0.0 available.\n",
       "INFO:transformers.file_utils:PyTorch version 1.3.1 available.\n",
       "INFO:transformers.modeling_xlnet:Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex .\n",
-      "2019-11-25 00:50:26,589 Reading data from conll2003\n",
-      "2019-11-25 00:50:26,590 Train: conll2003/eng.train\n",
-      "2019-11-25 00:50:26,591 Dev: conll2003/eng.testa\n",
-      "2019-11-25 00:50:26,592 Test: conll2003/eng.testb\n",
+      "2019-12-13 00:35:35,712 Reading data from conll2003\n",
+      "2019-12-13 00:35:35,713 Train: conll2003/eng.train\n",
+      "2019-12-13 00:35:35,713 Dev: conll2003/eng.testa\n",
+      "2019-12-13 00:35:35,714 Test: conll2003/eng.testb\n",
       "{\n",
       "    \"TRAIN\": {\n",
       "        \"dataset\": \"TRAIN\",\n",
@@ -454,6 +454,77 @@
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "seq_tagger.predict([['We', 'are', 'living', 'in', 'New', 'York', 'city', '.'],\n",
+    "                    ['Satya', 'Narayana', 'Nadella', 'is', 'an', 'engineer', 'and', 'business', 'executive', '.']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq_tagger.save_serialize('./model')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Restore model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '0'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "device = torch.device('cuda')\n",
+    "n_gpu = torch.cuda.device_count()\n",
+    "\n",
+    "for i in range(n_gpu):\n",
+    "    print(torch.cuda.get_device_name(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bert_sequence_tagger.bert_for_token_classification_custom import BertForTokenClassificationCustom\n",
+    "from bert_sequence_tagger import SequenceTaggerBert\n",
+    "\n",
+    "\n",
+    "seq_tagger = SequenceTaggerBert.load_serialized('./model', BertForTokenClassificationCustom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "seq_tagger.predict([['We', 'are', 'living', 'in', 'New', 'York', 'city', '.'],\n",
     "                    ['Satya', 'Narayana', 'Nadella', 'is', 'an', 'engineer', 'and', 'business', 'executive', '.']])"
